src/Umbraco.Community.Contentment/DataEditors/Notes/notes.css
/* Copyright © 2020 Lee Kelleher.
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/. */

/* To workaround a visual breaking-change introduced in Umbraco 10.1 ¯\_(ツ)_/¯ */
.contentment.umb-readonlyvalue {
    max-width: 100%;
}

.umb-readonlyvalue details summary {
    cursor: pointer;
}

    .umb-readonlyvalue details summary + * {
        margin-top: .5rem;
    }

.umb-readonlyvalue .well {
    margin-bottom: 10px;
}

    .umb-readonlyvalue .well blockquote p {
        font-size: 16px;
        margin-bottom: 10px;
    }

    .umb-readonlyvalue .well hr {
        border-bottom: 1px solid #e0e0e5;
        margin: 15px 0;
    }

